Add bootstrap image cache estimate API
